Fixing header styles
Previously, header styles were being squashed after being edited, due to
TinyMCE wrapping the text in extra paragraphs.

--- a/public/stylesheets/html5up-read-only/style.css
+++ b/public/stylesheets/html5up-read-only/style.css
@@ -190,7 +190,7 @@
 		font-size: 3.5em;
 	}
 
-		header.major h2 + p {
+		header.major h2 + div > p {
 			color: #777;
 			font-size: 1.75em;
 			font-weight: 700;
